--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,7 @@
 $base-color: #1d5aa2;
 $second-base-color: #79c25c;
 $third-base-color: #fe592e;
+$fourth-base-color: #e4c202;
 
 $padding: 1rem;
+$border-radius: 15px;
